<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hdr_simulation</name>
  <version>0.0.0</version>
  <description>This project provides a ROS2 Gazebo simulation environment for HD Hyundai Robotics robots</description>

  <maintainer email="kwon.hyojun@hd.com">hyojun</maintainer>
  <maintainer email="vewry12@hd.com">Jeongeun Kim</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>hdr_description</exec_depend>
  <exec_depend>hdr_moveit_config</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
